Assignment 1 - Lexical, Syntax Analysis/Code/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from e:\Semesters\Semester 222\Principles of Programming Languages\Assignments\Assignment 1\Code\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{}'", "'readInteger'", "'printInteger'", 
                     "'readFloat'", "'writeFloat'", "'readBooolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'boolean'", "'do'", "'else'", "'false'", "'float'", 
                     "'for'", "'function'", "'if'", "'integer'", "'return'", 
                     "'string'", "'true'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'main'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "'.'", 
                     "';'", "':'", "'='", "<INVALID>", "'\\'", "'\"'", "'''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LINECMT", "MULTLINECMT", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "STRINGLIT", "ARRAYLIT", "AUTO", "BREAK", "BOOLEAN", 
                      "DO", "ELSE", "FALSE", "FLOAT", "FOR", "FUNCTION", 
                      "IF", "INTEGER", "RETURN", "STRING", "TRUE", "WHILE", 
                      "VOID", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", 
                      "MAIN", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "AND", "OR", "EQ", "NOT_EQ", "LESS", "LESS_OR_EQ", 
                      "GREATER", "GREATER_OR_EQ", "STRING_CONCAT", "LP", 
                      "RP", "LS", "RS", "LC", "RC", "COMMA", "PERIOD", "SEMI", 
                      "COLON", "ASSIGN", "ID", "BACKSLASH", "DQUOTES", "SQUOTE", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_type_func = 1
    RULE_type_vardecl_noExpr = 2
    RULE_type_vardecl_withExpr = 3
    RULE_decls = 4
    RULE_idlist = 5
    RULE_arraydeclWithExpr = 6
    RULE_vardeclWithExpr = 7
    RULE_helpVardeclWithExpr = 8
    RULE_vardeclNoExpr = 9
    RULE_vardecls = 10
    RULE_paramdecl = 11
    RULE_funcdecl = 12
    RULE_funcdecls = 13
    RULE_expression_list = 14
    RULE_expression = 15
    RULE_string = 16
    RULE_relational = 17
    RULE_logical1 = 18
    RULE_arithmetic1 = 19
    RULE_arithmetic2 = 20
    RULE_logical2 = 21
    RULE_sign = 22
    RULE_index = 23
    RULE_term = 24
    RULE_function = 25
    RULE_statement = 26
    RULE_assign = 27
    RULE_if_ = 28
    RULE_for_ = 29
    RULE_while_ = 30
    RULE_do_while = 31
    RULE_break_ = 32
    RULE_continue_ = 33
    RULE_return_ = 34
    RULE_call = 35
    RULE_block_statement = 36
    RULE_special_function = 37
    RULE_read_int = 38
    RULE_print_int = 39
    RULE_read_float = 40
    RULE_write_float = 41
    RULE_read_bool = 42
    RULE_print_bool = 43
    RULE_read_string = 44
    RULE_print_string = 45
    RULE_super_ = 46
    RULE_prevent_default = 47

    ruleNames =  [ "program", "type_func", "type_vardecl_noExpr", "type_vardecl_withExpr", 
                   "decls", "idlist", "arraydeclWithExpr", "vardeclWithExpr", 
                   "helpVardeclWithExpr", "vardeclNoExpr", "vardecls", "paramdecl", 
                   "funcdecl", "funcdecls", "expression_list", "expression", 
                   "string", "relational", "logical1", "arithmetic1", "arithmetic2", 
                   "logical2", "sign", "index", "term", "function", "statement", 
                   "assign", "if_", "for_", "while_", "do_while", "break_", 
                   "continue_", "return_", "call", "block_statement", "special_function", 
                   "read_int", "print_int", "read_float", "write_float", 
                   "read_bool", "print_bool", "read_string", "print_string", 
                   "super_", "prevent_default" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    LINECMT=12
    MULTLINECMT=13
    INTLIT=14
    FLOATLIT=15
    BOOLLIT=16
    STRINGLIT=17
    ARRAYLIT=18
    AUTO=19
    BREAK=20
    BOOLEAN=21
    DO=22
    ELSE=23
    FALSE=24
    FLOAT=25
    FOR=26
    FUNCTION=27
    IF=28
    INTEGER=29
    RETURN=30
    STRING=31
    TRUE=32
    WHILE=33
    VOID=34
    OUT=35
    CONTINUE=36
    OF=37
    INHERIT=38
    ARRAY=39
    MAIN=40
    ADD=41
    SUB=42
    MUL=43
    DIV=44
    MOD=45
    NOT=46
    AND=47
    OR=48
    EQ=49
    NOT_EQ=50
    LESS=51
    LESS_OR_EQ=52
    GREATER=53
    GREATER_OR_EQ=54
    STRING_CONCAT=55
    LP=56
    RP=57
    LS=58
    RS=59
    LC=60
    RC=61
    COMMA=62
    PERIOD=63
    SEMI=64
    COLON=65
    ASSIGN=66
    ID=67
    BACKSLASH=68
    DQUOTES=69
    SQUOTE=70
    WS=71
    UNCLOSE_STRING=72
    ILLEGAL_ESCAPE=73
    ERROR_CHAR=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclsContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclsContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.MAIN or _la==MT22Parser.ID:
                self.state = 96
                self.decls()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INTLIT)
            else:
                return self.getToken(MT22Parser.INTLIT, i)

        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_type_func




    def type_func(self):

        localctx = MT22Parser.Type_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type_func)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.match(MT22Parser.ARRAY)
                self.state = 109
                self.match(MT22Parser.LS)
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 110
                        self.match(MT22Parser.INTLIT)
                        self.state = 111
                        self.match(MT22Parser.COMMA) 
                    self.state = 116
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 117
                self.match(MT22Parser.INTLIT)
                self.state = 118
                self.match(MT22Parser.RS)
                self.state = 119
                self.match(MT22Parser.OF)
                self.state = 120
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 121
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 7)
                self.state = 122
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_vardecl_noExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INTLIT)
            else:
                return self.getToken(MT22Parser.INTLIT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_type_vardecl_noExpr




    def type_vardecl_noExpr(self):

        localctx = MT22Parser.Type_vardecl_noExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_vardecl_noExpr)
        self._la = 0 # Token type
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.match(MT22Parser.ARRAY)
                self.state = 130
                self.match(MT22Parser.LS)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.INTLIT:
                    self.state = 135
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 131
                            self.match(MT22Parser.INTLIT)
                            self.state = 132
                            self.match(MT22Parser.COMMA) 
                        self.state = 137
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                    self.state = 138
                    self.match(MT22Parser.INTLIT)


                self.state = 141
                self.match(MT22Parser.RS)
                self.state = 142
                self.match(MT22Parser.OF)
                self.state = 143
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 6)
                self.state = 144
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_vardecl_withExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_type_vardecl_withExpr




    def type_vardecl_withExpr(self):

        localctx = MT22Parser.Type_vardecl_withExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_vardecl_withExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecls(self):
            return self.getTypedRuleContext(MT22Parser.VardeclsContext,0)


        def funcdecls(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decls)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.vardecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.funcdecls()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_idlist




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 153
                    self.match(MT22Parser.ID)
                    self.state = 154
                    self.match(MT22Parser.COMMA) 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 160
            self.match(MT22Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclWithExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def ARRAYLIT(self):
            return self.getToken(MT22Parser.ARRAYLIT, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INTLIT)
            else:
                return self.getToken(MT22Parser.INTLIT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraydeclWithExpr




    def arraydeclWithExpr(self):

        localctx = MT22Parser.ArraydeclWithExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraydeclWithExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MT22Parser.ID)
            self.state = 163
            self.match(MT22Parser.COLON)
            self.state = 164
            self.match(MT22Parser.ARRAY)
            self.state = 165
            self.match(MT22Parser.LS)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INTLIT:
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 166
                        self.match(MT22Parser.INTLIT)
                        self.state = 167
                        self.match(MT22Parser.COMMA) 
                    self.state = 172
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 173
                self.match(MT22Parser.INTLIT)


            self.state = 176
            self.match(MT22Parser.RS)
            self.state = 177
            self.match(MT22Parser.OF)
            self.state = 178
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 179
            self.match(MT22Parser.ASSIGN)
            self.state = 180
            self.match(MT22Parser.ARRAYLIT)
            self.state = 181
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclWithExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def helpVardeclWithExpr(self):
            return self.getTypedRuleContext(MT22Parser.HelpVardeclWithExprContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclWithExpr




    def vardeclWithExpr(self):

        localctx = MT22Parser.VardeclWithExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardeclWithExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.helpVardeclWithExpr()
            self.state = 184
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HelpVardeclWithExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)
